<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ezraerani.nycafterschool.MainActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nyc_doe_logo"
                android:adjustViewBounds="true"
                android:maxWidth="300dp"
                android:maxHeight="75dp"
                android:scaleType="fitCenter"
                android:id="@+id/NYC_DOE_LOGO"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/title"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/filters"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borough"
        android:id="@+id/btn_borough"
        android:layout_below="@+id/filters"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/program"
        android:id="@+id/btn_program"
        android:layout_below="@+id/btn_borough"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ageGroup"
        android:id="@+id/btn_ageGroup"
        android:layout_below="@+id/btn_program"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:id="@+id/btn_results"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />


</RelativeLayout>